# agents

./: .gitignore
1_foundations/exercises/: lab1_anthropic_exercise.ipynb  lab2_multi_model_exercise.ipynb  lab3_refactored_exercise.ipynb  lab4_deepseek_exercise.ipynb
1_foundations/exercises/career_chatbot_deepseek/: .env.example  .env.test  .gitignore  README.md  app.py  app_deepseek.py  pyproject.toml  requirements.txt
1_foundations/exercises/career_chatbot_deepseek/adr/: 002-technology-stack-selection.md  003-memory-management-strategy.md  README.md
1_foundations/exercises/career_chatbot_deepseek/config/: settings.py
1_foundations/exercises/career_chatbot_deepseek/core/: career_agent.py  controller.py  evaluator_agent.py
1_foundations/exercises/career_chatbot_deepseek/docs/: README.md
1_foundations/exercises/career_chatbot_deepseek/docs/adr/: 001-modular-architecture-with-rag-and-evaluator.md  004-rag-design-and-context-engineering.md  README.md  langchain-manus-context-engineering.md
1_foundations/exercises/career_chatbot_deepseek/docs/plan/: MVP_PLAN.md  QUICK_START.md  README.md  TODO.md  sprint_2_services.md  sprint_5_integration.md
1_foundations/exercises/career_chatbot_deepseek/memory/: memory_service.py  working_memory.py
1_foundations/exercises/career_chatbot_deepseek/models/: database.py  schemas.py
1_foundations/exercises/career_chatbot_deepseek/plan/: MVP_PLAN.md  QUICK_START.md  README.md  TODO.md  sprint_1_foundation.md  sprint_2_services.md  sprint_3_rag_tools.md  sprint_4_agents.md
1_foundations/exercises/career_chatbot_deepseek/services/: database_service.py  llm_service.py  notification_service.py  rag_service.py
1_foundations/exercises/career_chatbot_deepseek/tests/integration/: test_controller.py  test_e2e.py
1_foundations/exercises/career_chatbot_deepseek/tests/unit/: test_career_agent.py  test_concrete_tools.py  test_database.py  test_database_service.py  test_evaluator_agent.py  test_file_loader.py  test_llm_service.py  test_memory.py  test_notification_service.py  test_prompt_builder.py  test_rag_service.py  test_schemas.py  test_settings.py  test_tools.py
1_foundations/exercises/career_chatbot_deepseek/tools/: base.py  contact_tool.py  question_tool.py  registry.py  search_tool.py
1_foundations/exercises/career_chatbot_deepseek/utils/: file_loader.py  prompt_builder.py
1_foundations/exercises/h_space/: README.md
